Сверстан первый блок

--- a/index.html
+++ b/index.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Waxom</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <header class="head">
+        <div class="header-content-navigation">
+            <a href="#" class="logo-block"><img src="img/logos.png" alt="Logo">Waxom</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Shortcodes</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="nav-buttons">
+                <a href="#"><img src="img/icon-cart.svg" alt="cart"></a>
+                <a href="#"><img src="img/icon-search.svg" alt="search"></a>
+            </div>
+        </div>
+        <div class="slider">
+            <div class="slider-left"><a href="#"><img src="img/left.svg" alt="Slider left"></a></div>
+            <div class="slider-content">
+                <h3>Portfolio PSD Template</h3>
+                <h4>Unique and Modern Design</h4>
+                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                <div class="started">
+                    <button>get started</button>
+                </div>
+                <div class="pagination">
+                    <a href="" class="circle"></a><a href="" class="circle circle-active"></a><a href="" class="circle"></a><a href="" class="circle"></a><a href="" class="circle"></a>
+                </div>
+            </div>
+            <div class="slider-right"><a href="#"><img src="img/right.svg" alt="Slider right"></a></div>
+        </div>
+    </header>
 </body>
 </html>
