Сверстан 2,3 блоки. Начал верстку 4 блока

--- a/index.html
+++ b/index.html
@@ -40,5 +40,53 @@
             <div class="slider-right"><a href="#"><img src="img/right.svg" alt="Slider right"></a></div>
         </div>
     </header>
+    <section class="professions">
+        <div class="profession">
+            <svg xmlns="http://www.w3.org/2000/svg" width="47.594" height="47.59" viewBox="0 0 47.594 47.59"><path d="M47.137 16.59a1.591 1.591 0 0 0-2.248 0L31.042 30.43l-19.467 8.58-3-3 8.576-19.47L30.995 2.7A1.5902833 1.5902833 0 1 0 28.747.45L14.479 14.71.002 47.58 32.87 33.11l14.266-14.27a1.592 1.592 0 0 0 .001-2.25zm-20.173 11a1.606 1.606 0 0 0 2.25 0l13.332-13.34a1.591 1.591 0 0 0-2.25-2.25L26.969 25.34a1.593 1.593 0 0 0 0 2.25zm-3.48-3.48a1.606 1.606 0 0 0 2.25 0l13.333-13.34a1.591 1.591 0 0 0-2.25-2.25L23.484 21.85a1.6 1.6 0 0 0 0 2.26zm-3.481-3.49a1.581 1.581 0 0 0 2.25 0L35.586 7.29a1.591 1.591 0 0 0-2.25-2.25L20.003 18.37a1.593 1.593 0 0 0 0 2.25z" fill-rule="evenodd"/></svg>
+            <h3>Web & App Design</h3>
+            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
+            <hr>
+        </div>
+        <div class="profession">
+            <svg xmlns="http://www.w3.org/2000/svg" width="42.875" height="39.19" viewBox="0 0 42.875 39.19"><path d="M21.445.02L.008 11.58l21.437 11.56 21.436-11.56zm0 26.85L3.993 17.46.008 19.61l21.437 11.55 21.436-11.55-3.985-2.15zm0 8.02L3.993 25.48.008 27.63l21.437 11.56 21.436-11.56-3.985-2.15z" fill-rule="evenodd"/></svg>
+            <h3>Development</h3>
+            <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+            <hr>
+        </div>
+        <div class="profession">
+            <svg xmlns="http://www.w3.org/2000/svg" width="43.56" height="43.57" viewBox="0 0 43.56 43.57"><path d="M43.55 21.79a4.327 4.327 0 0 0-2.61-3.86 4.623 4.623 0 0 1-2.88-6.97A4.161 4.161 0 0 0 32.6 5.5a6.019 6.019 0 0 1-4.23.35 5.937 5.937 0 0 1-2.74-3.24 4.173 4.173 0 0 0-7.73 0 4.634 4.634 0 0 1-6.97 2.89 4.161 4.161 0 0 0-5.46 5.46 4.636 4.636 0 0 1-2.88 6.97 4.159 4.159 0 0 0 0 7.72 4.623 4.623 0 0 1 2.88 6.97 4.161 4.161 0 0 0 5.46 5.46 4.634 4.634 0 0 1 6.97 2.89 4.173 4.173 0 0 0 7.73 0 4.628 4.628 0 0 1 6.97-2.89 4.161 4.161 0 0 0 5.46-5.46 4.623 4.623 0 0 1 2.88-6.97 4.327 4.327 0 0 0 2.61-3.86zm-21.79 7.99a7.985 7.985 0 1 1 7.99-7.98 7.979 7.979 0 0 1-7.99 7.98z" fill-rule="evenodd"/></svg>
+            <h3>Customization</h3>
+            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
+            <hr>
+        </div>
+        <div class="profession">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50.88" height="35.63" viewBox="0 0 50.88 35.63"><path d="M8.25 12.91a6.787 6.787 0 0 1 5.74-3.61H40.2V7.64a2.482 2.482 0 0 0-2.46-2.48H26.92V3.72a3.707 3.707 0 0 0-3.68-3.73h-6.29a3.722 3.722 0 0 0-3.69 3.73v1.44H2.45A2.475 2.475 0 0 0-.01 7.64v22.17zm7.47-9.19a1.266 1.266 0 0 1 .36-.88 1.185 1.185 0 0 1 .87-.36h6.29a1.231 1.231 0 0 1 1.23 1.24v1.44h-8.75V3.72zm25.45 29.7a4.319 4.319 0 0 1-3.54 2.22H2.33a1.417 1.417 0 0 1-1.37-2.22L10.45 14a4.333 4.333 0 0 1 3.54-2.22h35.3A1.417 1.417 0 0 1 50.66 14z" fill-rule="evenodd"/></svg>
+            <h3>Marketing</h3>
+            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
+            <hr>
+        </div>
+    </section>
+    <section class="ideas">
+        <div class="ideas-content">
+            <h2>Waxom is Realization of your Ideas.</h2>
+            <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+            <div class="ideas-img">
+                <div class="left-idea"></div>
+                <div class="right-idea"></div>
+                <div class="center-idea"></div>
+            </div>
+        </div>
+    </section>
+    <section class="theme-info">
+        <div class="theme-info-content">
+            <div class="theme-info-title">
+                <h2><span>Waxom</span> Multipurpose WordPress Theme</h2>
+                <p>Don't Forget to Rate the Template. Thanks so much!</p>
+            </div>
+            <div class="theme-info-button">
+                <button>Purchase Now</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
