Работа над ошибками: тег img должен быть на новой строке.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <header class="head">
         <div class="header-content-navigation">
-            <a href="#" class="logo-block"><img src="img/logos.png" alt="Logo">Waxom</a>
+            <a href="#" class="logo-block">
+                <img src="img/logos.png" alt="Logo">
+                Waxom
+            </a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
