--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
             <div class="slider-content">
                 <h3>Portfolio PSD Template</h3>
                 <h4>Unique and Modern Design</h4>
-                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-                <div class="started">
+                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
                     <button>get started</button>
-                </div>
+                </p>
                 <div class="pagination">
                     <a href="" class="circle"></a><a href="" class="circle circle-active"></a><a href="" class="circle"></a><a href="" class="circle"></a><a href="" class="circle"></a>
                 </div>
