--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
                     <button>get started</button>
                 </p>
                 <div class="pagination">
-                    <a href="" class="circle"></a><a href="" class="circle circle-active"></a><a href="" class="circle"></a><a href="" class="circle"></a><a href="" class="circle"></a>
+                    <a href="#" class="circle"></a>
+                    <a href="#" class="circle circle-active"></a>
+                    <a href="#" class="circle"></a>
+                    <a href="#" class="circle"></a>
+                    <a href="#" class="circle"></a>
                 </div>
             </div>
             <div class="slider-right"><a href="#"><img src="img/right.svg" alt="Slider right"></a></div>
