--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </div>
         </div>
         <div class="slider">
-            <div class="slider-left"><a href="#"><img src="img/left.svg" alt="Slider left"></a></div>
+                <a href="#" class="switch">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="72.938" viewBox="0 0 40 72.938"><path id="left" class="cls-1" d="M188.026,547.979L150.005,511.5l38.021-36.48,1.969,2L154.066,511.5,190,545.977Z" transform="translate(-150 -475.031)"/></svg>
+                </a>
             <div class="slider-content">
                 <h3>Portfolio PSD Template</h3>
                 <h4>Unique and Modern Design</h4>
@@ -46,7 +48,10 @@
                     <a href="#" class="circle"></a>
                 </div>
             </div>
-            <div class="slider-right"><a href="#"><img src="img/right.svg" alt="Slider right"></a></div>
+                <a href="#" class="switch">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="72.938" viewBox="0 0 40 72.938"><path id="right" class="cls-1" d="M1731.97,547.979L1770,511.5l-38.03-36.48-1.97,2,35.93,34.476L1730,545.977Z" transform="translate(-1730 -475.031)"/></svg>
+                </a>
+
         </div>
     </header>
     <section class="professions">
