--- a/index.html
+++ b/index.html
@@ -87,12 +87,68 @@
             </div>
         </div>
     </section>
-    <section class="theme-info">
+    <aside class="theme-info">
         <div class="theme-info-content">
             <h2><span>Waxom</span> Multipurpose WordPress Theme</h2>
             <p>Don't Forget to Rate the Template. Thanks so much!</p>
             <button>Purchase Now</button>
         </div>
+    </aside>
+    <section class="latest-projects">
+        <h2>Our Latest Projects.</h2>
+        <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+        <div class="projects-category-list">
+            <a href="#" class="active-category">All</a>
+            <a href="#" class="project-category">Web Design</a>
+            <a href="#" class="project-category">Mobile App</a>
+            <a href="#" class="project-category">Illustration</a>
+            <a href="#" class="project-category">Photoraphy</a>
+        </div>
+        <div class="projects">
+            <div class="project">
+                <img src="img/photo1.jpg" alt="Project 1">
+                <h3>Claritas Etiam Processus</h3>
+                <span>Photography, Nature</span>
+                <button class="btn-link"></button>
+                <button class="btn-search"></button>
+            </div>
+            <div class="project">
+                <img src="img/photo2.jpg" alt="Project 2">
+                <h3>Quam Nutamus Farum</h3>
+                <span>Graphic Design, Mock-Up </span>
+                <button class="btn-link"></button>
+                <button class="btn-search"></button>
+            </div>
+            <div class="project">
+                <img src="img/photo3.jpg" alt="Project 3">
+                <h3>Usus Legentis Videntur</h3>
+                <span>Photography, Holiday</span>
+                <button class="btn-link"></button>
+                <button class="btn-search"></button>
+            </div>
+            <div class="project">
+                <img src="img/photo4.jpg" alt="Project 4">
+                <h3>Claritas Etiam Processus</h3>
+                <span>Photography, Nature</span>
+                <button class="btn-link"></button>
+                <button class="btn-search"></button>
+            </div>
+            <div class="project">
+                <img src="img/photo5.jpg" alt="Project 5">
+                <h3>Quam Nutamus Farum</h3>
+                <span>Graphic Design, Mock-Up </span>
+                <button class="btn-link"></button>
+                <button class="btn-search"></button>
+            </div>
+            <div class="project">
+                <img src="img/photo6.jpg" alt="Project 6">
+                <h3>Usus Legentis Videntur</h3>
+                <span>Photography, Holiday</span>
+                <button class="btn-link"></button>
+                <button class="btn-search"></button>
+            </div>
+        </div>
+        <button>load more</button>
     </section>
 </body>
 </html>
