Исправил дефект в 5 блоке

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <button class="btn-search"></button>
             </div>
         </div>
-        <button>load more</button>
+        <button class="load-more">load more</button>
     </section>
 </body>
 </html>
