--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             <nav class="nav-buttons">
-                <button class="cart"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="24"><path d="M1491 58h-1.5c0-1.657-2.02-3-4.5-3s-4.5 1.344-4.5 3h-1.5a3 3 0 0 0-3 3v15a3 3 0 0 0 3 3h12a3 3 0 0 0 2.99-3V61a3 3 0 0 0-2.99-3zm-6-1.5c1.66 0 3 .464 3 1.5h-6c0-1.038 1.34-1.5 3-1.5zm7.49 19.5a1.5 1.5 0 0 1-1.49 1.5h-12a1.5 1.5 0 0 1-1.5-1.5v-1.5h14.99V76zm0-3h-14.99V61a1.5 1.5 0 0 1 1.5-1.5h1.5V64h1.5v-4.5h6V64h1.5v-4.5h1.5a1.5 1.5 0 0 1 1.49 1.5v12z" transform="translate(-1476 -55)"/></svg></button>
+                <button class="cart">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="24"><path d="M1491 58h-1.5c0-1.657-2.02-3-4.5-3s-4.5 1.344-4.5 3h-1.5a3 3 0 0 0-3 3v15a3 3 0 0 0 3 3h12a3 3 0 0 0 2.99-3V61a3 3 0 0 0-2.99-3zm-6-1.5c1.66 0 3 .464 3 1.5h-6c0-1.038 1.34-1.5 3-1.5zm7.49 19.5a1.5 1.5 0 0 1-1.49 1.5h-12a1.5 1.5 0 0 1-1.5-1.5v-1.5h14.99V76zm0-3h-14.99V61a1.5 1.5 0 0 1 1.5-1.5h1.5V64h1.5v-4.5h6V64h1.5v-4.5h1.5a1.5 1.5 0 0 1 1.49 1.5v12z" transform="translate(-1476 -55)"/></svg>
+                </button>
                 <form>
                     <input type="text" class="search-input" placeholder="Search...">
                     <input type="submit" class="submit-button" value="">
@@ -109,43 +111,67 @@
                 <img src="img/photo1.jpg" alt="Project 1">
                 <h3>Claritas Etiam Processus</h3>
                 <span>Photography, Nature</span>
-                <button class="btn-link"></button>
-                <button class="btn-search"></button>
+                <button class="btn-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24.625" height="24.62" viewBox="0 0 24.625 24.62"><path d="M943.5,2643.49a6.208,6.208,0,0,0-8.743,0l-4.721,4.73a7.1,7.1,0,0,1,4.908.37l2.454-2.45a2.447,2.447,0,0,1,3.46,3.46l-3.085,3.09-2.028,2.02a2.438,2.438,0,0,1-3.46,0l-2.641,2.65a6.064,6.064,0,0,0,2.079,1.36,6.237,6.237,0,0,0,6.153-.9,4.686,4.686,0,0,0,.511-0.46l3.187-3.19,1.926-1.93A6.18,6.18,0,0,0,943.5,2643.49Zm-12.561,16.03-2.352,2.36a2.447,2.447,0,0,1-3.46-3.46l5.113-5.12a2.457,2.457,0,0,1,3.46,0l2.642-2.64a5.97,5.97,0,0,0-2.079-1.37,6.206,6.206,0,0,0-6.426,1.14,3.111,3.111,0,0,0-.239.23l-5.113,5.11a6.185,6.185,0,0,0,8.744,8.75l4.618-4.67C933.5,2660.39,932.949,2660.33,930.938,2659.52Z" transform="translate(-920.688 -2641.72)"/></svg>
+                </button>
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25.157" height="24.47" viewBox="0 0 25.157 24.47"><path d="M985.3,2645.08a1.3,1.3,0,1,0,0,2.59,4.156,4.156,0,0,1,3.748,2.31,1.327,1.327,0,0,0,1.758.6,1.284,1.284,0,0,0,.607-1.73A6.756,6.756,0,0,0,985.3,2645.08Zm14.152,17.8-4.383-4.32a10.838,10.838,0,0,0,2.068-6.36,11.158,11.158,0,1,0-4.346,8.7l4.335,4.27a1.649,1.649,0,0,0,2.326,0A1.6,1.6,0,0,0,999.456,2662.88Zm-22.047-10.68a8.552,8.552,0,0,1,17.1,0,8.4,8.4,0,0,1-3.029,6.42A8.561,8.561,0,0,1,977.409,2652.2Z" transform="translate(-974.781 -2641.19)"/></svg>
+                </button>
             </div>
             <div class="project">
                 <img src="img/photo2.jpg" alt="Project 2">
                 <h3>Quam Nutamus Farum</h3>
                 <span>Graphic Design, Mock-Up </span>
-                <button class="btn-link"></button>
-                <button class="btn-search"></button>
+                <button class="btn-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24.625" height="24.62" viewBox="0 0 24.625 24.62"><path d="M943.5,2643.49a6.208,6.208,0,0,0-8.743,0l-4.721,4.73a7.1,7.1,0,0,1,4.908.37l2.454-2.45a2.447,2.447,0,0,1,3.46,3.46l-3.085,3.09-2.028,2.02a2.438,2.438,0,0,1-3.46,0l-2.641,2.65a6.064,6.064,0,0,0,2.079,1.36,6.237,6.237,0,0,0,6.153-.9,4.686,4.686,0,0,0,.511-0.46l3.187-3.19,1.926-1.93A6.18,6.18,0,0,0,943.5,2643.49Zm-12.561,16.03-2.352,2.36a2.447,2.447,0,0,1-3.46-3.46l5.113-5.12a2.457,2.457,0,0,1,3.46,0l2.642-2.64a5.97,5.97,0,0,0-2.079-1.37,6.206,6.206,0,0,0-6.426,1.14,3.111,3.111,0,0,0-.239.23l-5.113,5.11a6.185,6.185,0,0,0,8.744,8.75l4.618-4.67C933.5,2660.39,932.949,2660.33,930.938,2659.52Z" transform="translate(-920.688 -2641.72)"/></svg>
+                </button>
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25.157" height="24.47" viewBox="0 0 25.157 24.47"><path d="M985.3,2645.08a1.3,1.3,0,1,0,0,2.59,4.156,4.156,0,0,1,3.748,2.31,1.327,1.327,0,0,0,1.758.6,1.284,1.284,0,0,0,.607-1.73A6.756,6.756,0,0,0,985.3,2645.08Zm14.152,17.8-4.383-4.32a10.838,10.838,0,0,0,2.068-6.36,11.158,11.158,0,1,0-4.346,8.7l4.335,4.27a1.649,1.649,0,0,0,2.326,0A1.6,1.6,0,0,0,999.456,2662.88Zm-22.047-10.68a8.552,8.552,0,0,1,17.1,0,8.4,8.4,0,0,1-3.029,6.42A8.561,8.561,0,0,1,977.409,2652.2Z" transform="translate(-974.781 -2641.19)"/></svg>
+                </button>
             </div>
             <div class="project">
                 <img src="img/photo3.jpg" alt="Project 3">
                 <h3>Usus Legentis Videntur</h3>
                 <span>Photography, Holiday</span>
-                <button class="btn-link"></button>
-                <button class="btn-search"></button>
+                <button class="btn-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24.625" height="24.62" viewBox="0 0 24.625 24.62"><path d="M943.5,2643.49a6.208,6.208,0,0,0-8.743,0l-4.721,4.73a7.1,7.1,0,0,1,4.908.37l2.454-2.45a2.447,2.447,0,0,1,3.46,3.46l-3.085,3.09-2.028,2.02a2.438,2.438,0,0,1-3.46,0l-2.641,2.65a6.064,6.064,0,0,0,2.079,1.36,6.237,6.237,0,0,0,6.153-.9,4.686,4.686,0,0,0,.511-0.46l3.187-3.19,1.926-1.93A6.18,6.18,0,0,0,943.5,2643.49Zm-12.561,16.03-2.352,2.36a2.447,2.447,0,0,1-3.46-3.46l5.113-5.12a2.457,2.457,0,0,1,3.46,0l2.642-2.64a5.97,5.97,0,0,0-2.079-1.37,6.206,6.206,0,0,0-6.426,1.14,3.111,3.111,0,0,0-.239.23l-5.113,5.11a6.185,6.185,0,0,0,8.744,8.75l4.618-4.67C933.5,2660.39,932.949,2660.33,930.938,2659.52Z" transform="translate(-920.688 -2641.72)"/></svg>
+                </button>
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25.157" height="24.47" viewBox="0 0 25.157 24.47"><path d="M985.3,2645.08a1.3,1.3,0,1,0,0,2.59,4.156,4.156,0,0,1,3.748,2.31,1.327,1.327,0,0,0,1.758.6,1.284,1.284,0,0,0,.607-1.73A6.756,6.756,0,0,0,985.3,2645.08Zm14.152,17.8-4.383-4.32a10.838,10.838,0,0,0,2.068-6.36,11.158,11.158,0,1,0-4.346,8.7l4.335,4.27a1.649,1.649,0,0,0,2.326,0A1.6,1.6,0,0,0,999.456,2662.88Zm-22.047-10.68a8.552,8.552,0,0,1,17.1,0,8.4,8.4,0,0,1-3.029,6.42A8.561,8.561,0,0,1,977.409,2652.2Z" transform="translate(-974.781 -2641.19)"/></svg>
+                </button>
             </div>
             <div class="project">
                 <img src="img/photo4.jpg" alt="Project 4">
                 <h3>Claritas Etiam Processus</h3>
                 <span>Photography, Nature</span>
-                <button class="btn-link"></button>
-                <button class="btn-search"></button>
+                <button class="btn-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24.625" height="24.62" viewBox="0 0 24.625 24.62"><path d="M943.5,2643.49a6.208,6.208,0,0,0-8.743,0l-4.721,4.73a7.1,7.1,0,0,1,4.908.37l2.454-2.45a2.447,2.447,0,0,1,3.46,3.46l-3.085,3.09-2.028,2.02a2.438,2.438,0,0,1-3.46,0l-2.641,2.65a6.064,6.064,0,0,0,2.079,1.36,6.237,6.237,0,0,0,6.153-.9,4.686,4.686,0,0,0,.511-0.46l3.187-3.19,1.926-1.93A6.18,6.18,0,0,0,943.5,2643.49Zm-12.561,16.03-2.352,2.36a2.447,2.447,0,0,1-3.46-3.46l5.113-5.12a2.457,2.457,0,0,1,3.46,0l2.642-2.64a5.97,5.97,0,0,0-2.079-1.37,6.206,6.206,0,0,0-6.426,1.14,3.111,3.111,0,0,0-.239.23l-5.113,5.11a6.185,6.185,0,0,0,8.744,8.75l4.618-4.67C933.5,2660.39,932.949,2660.33,930.938,2659.52Z" transform="translate(-920.688 -2641.72)"/></svg>
+                </button>
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25.157" height="24.47" viewBox="0 0 25.157 24.47"><path d="M985.3,2645.08a1.3,1.3,0,1,0,0,2.59,4.156,4.156,0,0,1,3.748,2.31,1.327,1.327,0,0,0,1.758.6,1.284,1.284,0,0,0,.607-1.73A6.756,6.756,0,0,0,985.3,2645.08Zm14.152,17.8-4.383-4.32a10.838,10.838,0,0,0,2.068-6.36,11.158,11.158,0,1,0-4.346,8.7l4.335,4.27a1.649,1.649,0,0,0,2.326,0A1.6,1.6,0,0,0,999.456,2662.88Zm-22.047-10.68a8.552,8.552,0,0,1,17.1,0,8.4,8.4,0,0,1-3.029,6.42A8.561,8.561,0,0,1,977.409,2652.2Z" transform="translate(-974.781 -2641.19)"/></svg>
+                </button>
             </div>
             <div class="project">
                 <img src="img/photo5.jpg" alt="Project 5">
                 <h3>Quam Nutamus Farum</h3>
                 <span>Graphic Design, Mock-Up </span>
-                <button class="btn-link"></button>
-                <button class="btn-search"></button>
+                <button class="btn-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24.625" height="24.62" viewBox="0 0 24.625 24.62"><path d="M943.5,2643.49a6.208,6.208,0,0,0-8.743,0l-4.721,4.73a7.1,7.1,0,0,1,4.908.37l2.454-2.45a2.447,2.447,0,0,1,3.46,3.46l-3.085,3.09-2.028,2.02a2.438,2.438,0,0,1-3.46,0l-2.641,2.65a6.064,6.064,0,0,0,2.079,1.36,6.237,6.237,0,0,0,6.153-.9,4.686,4.686,0,0,0,.511-0.46l3.187-3.19,1.926-1.93A6.18,6.18,0,0,0,943.5,2643.49Zm-12.561,16.03-2.352,2.36a2.447,2.447,0,0,1-3.46-3.46l5.113-5.12a2.457,2.457,0,0,1,3.46,0l2.642-2.64a5.97,5.97,0,0,0-2.079-1.37,6.206,6.206,0,0,0-6.426,1.14,3.111,3.111,0,0,0-.239.23l-5.113,5.11a6.185,6.185,0,0,0,8.744,8.75l4.618-4.67C933.5,2660.39,932.949,2660.33,930.938,2659.52Z" transform="translate(-920.688 -2641.72)"/></svg>
+                </button>
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25.157" height="24.47" viewBox="0 0 25.157 24.47"><path d="M985.3,2645.08a1.3,1.3,0,1,0,0,2.59,4.156,4.156,0,0,1,3.748,2.31,1.327,1.327,0,0,0,1.758.6,1.284,1.284,0,0,0,.607-1.73A6.756,6.756,0,0,0,985.3,2645.08Zm14.152,17.8-4.383-4.32a10.838,10.838,0,0,0,2.068-6.36,11.158,11.158,0,1,0-4.346,8.7l4.335,4.27a1.649,1.649,0,0,0,2.326,0A1.6,1.6,0,0,0,999.456,2662.88Zm-22.047-10.68a8.552,8.552,0,0,1,17.1,0,8.4,8.4,0,0,1-3.029,6.42A8.561,8.561,0,0,1,977.409,2652.2Z" transform="translate(-974.781 -2641.19)"/></svg>
+                </button>
             </div>
             <div class="project">
                 <img src="img/photo6.jpg" alt="Project 6">
                 <h3>Usus Legentis Videntur</h3>
                 <span>Photography, Holiday</span>
-                <button class="btn-link"></button>
-                <button class="btn-search"></button>
+                <button class="btn-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24.625" height="24.62" viewBox="0 0 24.625 24.62"><path d="M943.5,2643.49a6.208,6.208,0,0,0-8.743,0l-4.721,4.73a7.1,7.1,0,0,1,4.908.37l2.454-2.45a2.447,2.447,0,0,1,3.46,3.46l-3.085,3.09-2.028,2.02a2.438,2.438,0,0,1-3.46,0l-2.641,2.65a6.064,6.064,0,0,0,2.079,1.36,6.237,6.237,0,0,0,6.153-.9,4.686,4.686,0,0,0,.511-0.46l3.187-3.19,1.926-1.93A6.18,6.18,0,0,0,943.5,2643.49Zm-12.561,16.03-2.352,2.36a2.447,2.447,0,0,1-3.46-3.46l5.113-5.12a2.457,2.457,0,0,1,3.46,0l2.642-2.64a5.97,5.97,0,0,0-2.079-1.37,6.206,6.206,0,0,0-6.426,1.14,3.111,3.111,0,0,0-.239.23l-5.113,5.11a6.185,6.185,0,0,0,8.744,8.75l4.618-4.67C933.5,2660.39,932.949,2660.33,930.938,2659.52Z" transform="translate(-920.688 -2641.72)"/></svg>
+                </button>
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25.157" height="24.47" viewBox="0 0 25.157 24.47"><path d="M985.3,2645.08a1.3,1.3,0,1,0,0,2.59,4.156,4.156,0,0,1,3.748,2.31,1.327,1.327,0,0,0,1.758.6,1.284,1.284,0,0,0,.607-1.73A6.756,6.756,0,0,0,985.3,2645.08Zm14.152,17.8-4.383-4.32a10.838,10.838,0,0,0,2.068-6.36,11.158,11.158,0,1,0-4.346,8.7l4.335,4.27a1.649,1.649,0,0,0,2.326,0A1.6,1.6,0,0,0,999.456,2662.88Zm-22.047-10.68a8.552,8.552,0,0,1,17.1,0,8.4,8.4,0,0,1-3.029,6.42A8.561,8.561,0,0,1,977.409,2652.2Z" transform="translate(-974.781 -2641.19)"/></svg>
+                </button>
             </div>
         </div>
         <button class="load-more">load more</button>
