--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="head">
-        <div class="header-content-navigation">
+        <nav class="header-content-navigation">
             <a href="#" class="logo-block">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="56px"><path d="M52.873,55.128 L58.125,45.939 L63.377,55.128 L52.873,55.128 ZM46.303,45.172 L56.811,45.172 L51.557,54.359 L46.303,45.172 ZM51.557,34.451 L56.811,43.641 L46.303,43.641 L51.557,34.451 ZM39.738,33.686 L50.243,33.686 L44.990,42.874 L39.738,33.686 ZM44.990,22.967 L50.243,32.154 L39.738,32.154 L44.990,22.967 ZM33.168,22.202 L43.676,22.202 L38.422,31.390 L33.168,22.202 ZM38.422,11.480 L43.676,20.671 L33.168,20.671 L38.422,11.480 ZM26.600,10.713 L37.108,10.713 L31.854,19.905 L26.600,10.713 ZM31.854,-0.006 L37.108,9.184 L26.600,9.184 L31.854,-0.006 ZM20.032,20.671 L25.286,11.480 L30.540,20.671 L20.032,20.671 ZM13.465,32.154 L18.718,22.967 L23.971,32.154 L13.465,32.154 ZM6.897,43.641 L12.151,34.451 L17.404,43.641 L6.897,43.641 ZM0.331,55.128 L5.582,45.939 L10.836,55.128 L0.331,55.128 ZM17.404,45.172 L12.151,54.359 L6.897,45.172 L17.404,45.172 ZM23.971,33.686 L18.718,42.874 L13.465,33.686 L23.971,33.686 ZM30.540,22.202 L25.286,31.390 L20.032,22.202 L30.540,22.202 ZM37.108,55.128 L26.600,55.128 L31.854,45.939 L37.108,55.128 ZM43.676,45.172 L38.422,54.359 L33.168,45.172 L43.676,45.172 ZM50.243,55.128 L39.738,55.128 L44.990,45.939 L50.243,55.128 Z"/></svg>
                 Waxom
@@ -22,7 +22,7 @@
                 <li><a href="#">Shortcodes</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <nav class="nav-buttons">
+            <div class="nav-buttons">
                 <button class="cart">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="24"><path d="M1491 58h-1.5c0-1.657-2.02-3-4.5-3s-4.5 1.344-4.5 3h-1.5a3 3 0 0 0-3 3v15a3 3 0 0 0 3 3h12a3 3 0 0 0 2.99-3V61a3 3 0 0 0-2.99-3zm-6-1.5c1.66 0 3 .464 3 1.5h-6c0-1.038 1.34-1.5 3-1.5zm7.49 19.5a1.5 1.5 0 0 1-1.49 1.5h-12a1.5 1.5 0 0 1-1.5-1.5v-1.5h14.99V76zm0-3h-14.99V61a1.5 1.5 0 0 1 1.5-1.5h1.5V64h1.5v-4.5h6V64h1.5v-4.5h1.5a1.5 1.5 0 0 1 1.49 1.5v12z" transform="translate(-1476 -55)"/></svg>
                 </button>
@@ -30,8 +30,8 @@
                     <input type="text" class="search-input" placeholder="Search...">
                     <input type="submit" class="submit-button" value="">
                 </form>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <div class="slider">
                 <a href="#" class="switch">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="72.938" viewBox="0 0 40 72.938"><path id="left" class="cls-1" d="M188.026,547.979L150.005,511.5l38.021-36.48,1.969,2L154.066,511.5,190,545.977Z" transform="translate(-150 -475.031)"/></svg>
