Работа над ошибками: Тег button не нужно оборачивать в p

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
             <div class="slider-content">
                 <h3>Portfolio PSD Template</h3>
                 <h4>Unique and Modern Design</h4>
-                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
-                    <button>get started</button>
-                </p>
+                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                <button>get started</button>
                 <div class="pagination">
                     <a href="#" class="circle"></a>
                     <a href="#" class="circle circle-active"></a>
