Работа над ошибками: добавить множественный фон блоку

--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
         <div class="ideas-content">
             <h2>Waxom is Realization of your Ideas.</h2>
             <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
-            <div class="ideas-img">
-                <div class="left-idea"></div>
-                <div class="right-idea"></div>
-                <div class="center-idea"></div>
-            </div>
+            <div class="ideas-img"></div>
         </div>
     </section>
     <aside class="theme-info">
