Работа над ошибками: Здесь лучше использовать div > button <div class="projects-category-list">

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
         <h2>Our Latest Projects.</h2>
         <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
         <div class="projects-category-list">
-            <a href="#" class="active-category">All</a>
-            <a href="#" class="project-category">Web Design</a>
-            <a href="#" class="project-category">Mobile App</a>
-            <a href="#" class="project-category">Illustration</a>
-            <a href="#" class="project-category">Photoraphy</a>
+            <button class="active-category">All</button>
+            <button class="project-category">Web Design</button>
+            <button class="project-category">Mobile App</button>
+            <button class="project-category">Illustration</button>
+            <button class="project-category">Photoraphy</button>
         </div>
         <div class="projects">
             <div class="project">
