--- a/index.html
+++ b/index.html
@@ -181,5 +181,15 @@
             <span>03:26</span>
         </div>
     </section>
+    <section class="devices-block">
+        <h2>Excellent for Mobile Devices.</h2>
+        <p>Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+        <ul>
+            <li>Nam liber tempor cum soluta nobis eleifend option;</li>
+            <li>Option congue nihil imperdiet doming id quod mazim placerat facer;</li>
+            <li>Eodem modo typi, qui nunc nobis videntur parum futurum;</li>
+            <li>Investigationes demonstraverunt lectores</li>
+        </ul>
+    </section>
 </body>
 </html>
