Доверстал футер, начал верстать адаптив

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="cal-data">30</div>
                     <div class="cal-month">Sep.</div>
                 </div>
-                <div class="pagination-post">
+                <div class="pagination-img">
                     <a href="#" class="circle"></a>
                     <a href="#" class="circle circle-active"></a>
                     <a href="#" class="circle"></a>
@@ -259,7 +259,104 @@
                     <div class="cal-month">Sep.</div>
                 </div>
             </div>
+            <div class="posts-pagination">
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21.969" height="21.97" viewBox="0 0 21.969 21.97">
+                        <path d="M942.583,5770.43l4.772-4.77a0.735,0.735,0,0,1,1.04,1.04l-4.254,4.26,4.254,4.25a0.735,0.735,0,0,1-1.04,1.04l-4.772-4.77a0.731,0.731,0,0,1-.216-0.52A0.759,0.759,0,0,1,942.583,5770.43Zm3.4-10.4A10.98,10.98,0,1,1,935,5771.01,10.979,10.979,0,0,1,945.987,5760.03Zm0,20.49a9.51,9.51,0,1,0-9.512-9.51A9.526,9.526,0,0,0,945.987,5780.52Z" transform="translate(-935 -5760.03)"/>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21.969" height="21.97" viewBox="0 0 21.969 21.97">
+                        <path d="M979.417,5770.43l-4.772-4.77a0.735,0.735,0,0,0-1.04,1.04l4.254,4.26-4.254,4.25a0.735,0.735,0,0,0,1.04,1.04l4.772-4.77a0.731,0.731,0,0,0,.216-0.52A0.759,0.759,0,0,0,979.417,5770.43Zm-3.405-10.4A10.98,10.98,0,1,0,987,5771.01,10.978,10.978,0,0,0,976.012,5760.03Zm0,20.49a9.51,9.51,0,1,1,9.513-9.51A9.526,9.526,0,0,1,976.012,5780.52Z" transform="translate(-965.031 -5760.03)"/>
+                    </svg>
+                </a>
+            </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-top">
+            <a href="#">
+                <img src="img/logo-01.png" alt="Company 1">
+            </a>
+            <a href="#">
+                <img src="img/logo-02.png" alt="Company 2">
+            </a>
+            <a href="#">
+                <img src="img/logo-03.png" alt="Company 3">
+            </a>
+            <a href="#">
+                <img src="img/logo-04.png" alt="Company 4">
+            </a>
+        </div>
+        <div class="footer-center">
+            <div class="footer-center-info">
+                <a href="#" class="footer-logo-block">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="56px"><path d="M52.873,55.128 L58.125,45.939 L63.377,55.128 L52.873,55.128 ZM46.303,45.172 L56.811,45.172 L51.557,54.359 L46.303,45.172 ZM51.557,34.451 L56.811,43.641 L46.303,43.641 L51.557,34.451 ZM39.738,33.686 L50.243,33.686 L44.990,42.874 L39.738,33.686 ZM44.990,22.967 L50.243,32.154 L39.738,32.154 L44.990,22.967 ZM33.168,22.202 L43.676,22.202 L38.422,31.390 L33.168,22.202 ZM38.422,11.480 L43.676,20.671 L33.168,20.671 L38.422,11.480 ZM26.600,10.713 L37.108,10.713 L31.854,19.905 L26.600,10.713 ZM31.854,-0.006 L37.108,9.184 L26.600,9.184 L31.854,-0.006 ZM20.032,20.671 L25.286,11.480 L30.540,20.671 L20.032,20.671 ZM13.465,32.154 L18.718,22.967 L23.971,32.154 L13.465,32.154 ZM6.897,43.641 L12.151,34.451 L17.404,43.641 L6.897,43.641 ZM0.331,55.128 L5.582,45.939 L10.836,55.128 L0.331,55.128 ZM17.404,45.172 L12.151,54.359 L6.897,45.172 L17.404,45.172 ZM23.971,33.686 L18.718,42.874 L13.465,33.686 L23.971,33.686 ZM30.540,22.202 L25.286,31.390 L20.032,22.202 L30.540,22.202 ZM37.108,55.128 L26.600,55.128 L31.854,45.939 L37.108,55.128 ZM43.676,45.172 L38.422,54.359 L33.168,45.172 L43.676,45.172 ZM50.243,55.128 L39.738,55.128 L44.990,45.939 L50.243,55.128 Z"/></svg>
+                    Waxom
+                </a>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci suscipit lobortis claritatem.</p>
+                <a href="#" class="footer-read-more">Read More</a>
+            </div>
+            <div class="footer-center-posts">
+                <h3>Recent posts</h3>
+                <a href="#">
+                    <span class="data-recent-posts">September 08, 2015</span>
+                    <span class="footer-post">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</span>
+                </a>
+                <a href="#">
+                    <span class="data-recent-posts">September 08, 2015</span>
+                    <span class="footer-post">Diam nonummy nibh euismod tincidunt ut laoreet dolore magna</span>
+                </a>
+                <a href="#">
+                    <span class="data-recent-posts">September 08, 2015</span>
+                    <span class="footer-post">Claritas est etiam processus dynamicus, qui sequitur mutationem per seacula quarta decima</span>
+                </a>
+            </div>
+            <div class="footer-center-posts">
+                <h3>Our twitter</h3>
+                <div>
+                    <span class="footer-post"><a href="#" class="mention">@waxom</a> Cum soluta nobis eleifend option congue nihil imperdiet doming</span>
+                    <span class="data-recent-posts">3 mins ago</span>
+                </div>
+                <div>
+                    <span class="footer-post">Mirum est <a href="#" class="mention">#envato</a> notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</span>
+                    <span class="data-recent-posts">5 hours ago</span>
+                </div>
+                <div>
+                    <span class="footer-post">Soluta nobis option <a href="#">bit.ly/1Hniso7</a></span>
+                    <span class="data-recent-posts">20 days ago</span>
+                </div>
+            </div>
+            <div class="footer-center-block">
+                <h3>Dribbble widget</h3>
+                <a href="#">
+                    <img src="img/widget-1.jpg" alt="Widget 1">
+                </a>
+                <a href="#">
+                    <img src="img/widget-2.jpg" alt="Widget 2">
+                </a>
+                <a href="#">
+                    <img src="img/widget-3.jpg" alt="Widget 3">
+                </a>
+                <a href="#">
+                    <img src="img/widget-4.jpg" alt="Widget 4">
+                </a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <ul>
+                    <li>Copyright &copy; 2015 <a href="#">Waxom</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+                <ul>
+                    <li>Designed by <a href="#">ThemeFire</a></li>
+                    <li>Only on <a href="#">Envato Market</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
